# navi

./: .gitignore  ACTOR_ARCHITECTURE.md  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NEW_APPROACH.md  NOTES.md  NOTICE  PLAN.md  README.md  RESEARCH.md  REVIEW.md  SECURITY.md  SIMULATOR.md  TEMP.md  TODO.md  check_results.txt  debug.err  debug_cmd.json  e2e_results.txt  get_path.py  latest_audit.err  latest_audit.json  latest_stderr.err  minipython.py  temp_log.txt  test.py  test2.ps1  test_array.ps1  test_cli.py  test_cli2.py  test_subprocess.py  tmp_dash_help.txt
projects/actor/: README.md  bench_temporal_audit.py  bench_temporal_cores.py  bench_temporal_isolated.py  pyproject.toml  ruff.toml  test_mamba2_integration.py  test_mamba2_smoke.py
projects/actor/scripts/: bench_temporal_backends.py
projects/actor/src/: pydantic_settings.pyi
projects/actor/src/navi_actor/: __init__.py  actor_critic.py  cli.py  cognitive_policy.py  config.py  gru_core.py  learner_ppo.py  mamba2_core.py  mamba_core.py  mamba_ssm_core.py  mambapy_core.py  model_registry.py  perception.py  policy.py  reward_shaping.py  rnd.py  rollout_buffer.py  server.py  spherical_features.py
projects/actor/src/navi_actor/inference/: __init__.py  runner.py
projects/actor/src/navi_actor/memory/: __init__.py  episodic.py
projects/actor/src/navi_actor/training/: __init__.py  bc_trainer.py  callbacks.py  loop.py  online.py  ppo_trainer.py
projects/actor/tests/: conftest.py
projects/actor/tests/integration/: test_zmq_subscribe.py
projects/actor/tests/unit/: test_actor_critic.py  test_checkpoint_schedule.py  test_cli_canonical_training.py  test_cognitive_policy.py  test_config.py  test_episodic_memory.py  test_learned_policy.py  test_mamba2_core.py  test_mamba_core.py  test_model_registry.py  test_online_trainer.py  test_perception.py  test_policy.py  test_ppo_learner.py  test_reward_shaping.py  test_rnd.py  test_spherical_cnn.py  test_training.py  test_training_state.py  test_trajectory_buffer.py
projects/auditor/: README.md  pyproject.toml  ruff.toml
projects/auditor/src/navi_auditor/: __init__.py  cli.py  config.py  demonstration_recorder.py  matrix_viewer.py  recorder.py  rewinder.py  stream_engine.py
projects/auditor/src/navi_auditor/dashboard/: __init__.py  app.py  occupancy_view.py  panels.py  renderers.py  scene_view.py  status_line.py
projects/auditor/tests/integration/: test_record_replay.py
projects/auditor/tests/unit/: _analyze_snapshot.py  test_cli.py  test_occupancy_view.py  test_recorder.py  test_renderers.py  test_rewinder.py  test_snapshot.py  test_status_line.py  test_storage.py  test_stream_engine.py
projects/contracts/: README.md  pyproject.toml  ruff.toml
projects/contracts/src/navi_contracts/: __init__.py  logging.py  models.py  observability.py  serialization.py  topics.py  types.py
projects/contracts/tests/: conftest.py  test_models.py  test_serialization_v2.py  test_topics_v2.py
projects/environment/: README.md  pyproject.toml  ruff.toml
projects/environment/src/: pydantic_settings.pyi
projects/environment/src/navi_environment/: __init__.py  cli.py  cli.py_temp  config.py  distance_matrix_v2.py  lookahead.py  mjx_env.py  raycast.py  server.py  sliding_window.py
projects/environment/tests/: conftest.py
projects/environment/tests/integration/: test_full_pipeline_oracle.py  test_live_corpus_validation.py  test_oracle_fixture_pipeline.py  test_step_cycle.py
projects/environment/tests/unit/: test_backends.py  test_cli_canonical_runtime.py  test_collision_barrier.py  test_corpus_preparation.py  test_dataset_adapter_contract.py  test_dataset_fixture_sequence.py  test_distance_matrix_orientation.py  test_file_generator_sparse.py  test_frustum.py  test_kinematics_oracle.py  test_lookahead.py  test_matrix.py  test_maze_generator.py  test_mesh_backend.py  test_mjx_env.py  test_postprocessing_oracle.py  test_pruning.py  test_ray_direction_oracle.py  test_rooms_generator.py  test_sdfdag_conventions.py  test_semantic_lut.py  test_server.py  test_sliding_window.py  test_voxel_dag_integration.py  test_world_compiler.py  test_yaw_rotation_oracle.py
projects/inspector/: README.md  pyproject.toml  test_out.txt  test_output.txt  test_results.txt  test_results2.txt
projects/inspector/src/navi_inspector/: __init__.py  cache.py  cli.py  config.py  dag_extractor.py  gmdag_io.py  mesh_builder.py  viewer.py
projects/inspector/tests/: smoke_test.py  van-gogh-test.ply
projects/inspector/tests/unit/: test_dag_extractor.py  test_gmdag_io.py  test_mesh_builder.py
projects/section-manager/: README.md  pyproject.toml  ruff.toml
projects/section-manager/src/navi_section_manager/: __init__.py  cli.py  config.py  distance_matrix_v2.py  frustum.py  matrix.py  mjx_env.py  pruning.py  raycast.py  server.py  sliding_window.py
projects/section-manager/tests/integration/: test_step_cycle.py
projects/section-manager/tests/unit/: test_backends.py  test_collision_barrier.py  test_distance_matrix_orientation.py  test_file_generator_sparse.py  test_frustum.py  test_lookahead.py  test_matrix.py  test_maze_generator.py  test_mesh_backend.py  test_pruning.py  test_rooms_generator.py  test_semantic_lut.py  test_sliding_window.py  test_world_compiler.py
projects/torch-sdf/: CMakeLists.txt  README.md  pyproject.toml  setup.py
projects/torch-sdf/cpp_src/: bindings.cpp  kernel.cu  kernel.cuh
projects/torch-sdf/tests/: conftest.py  test_analytical_raycasting.py  test_full_pipeline.py  test_gmdag_roundtrip.py  test_oracle_refinement.py  test_sphere_tracing.py
projects/torch-sdf/torch_sdf/: __init__.py  backend.py
projects/voxel-dag/: CMakeLists.txt  README.md  pyproject.toml
projects/voxel-dag/src/: compiler.cpp  compiler.hpp  main.cpp
projects/voxel-dag/tests/: test_analytical_sdf_oracle.py  test_bsp_parser.py  test_compiler_contracts.cpp  test_dag_leaf_faithfulness.py  test_dedup_contract.py  test_integrity.py  test_mathematical_logic.py  test_suite.py  test_voxel_dag.cpp
projects/voxel-dag/voxel_dag/: __init__.py  bsp_to_obj.py  compiler.py
(+130 files in other folders)
