[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "navi-actor"
version = "0.1.0"
description = "Layer 2: The Brain — Cognitive Actor with canonical Mamba temporal core, PPO, and RND"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "navi-contracts>=0.1.0",
    "navi-environment>=0.1.0",
    "mambapy>=1.2.0",
    "pyzmq>=26.0",
    "typer>=0.15",
    "torch==2.5.1",
    "numpy>=1.26",
    "matplotlib>=3.9",
    "msgpack>=1.0",
    "msgpack-numpy>=0.4",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "einops>=0.8.0",
    "psutil>=7.2.2",
    "pydantic-settings>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
navi-actor = "navi_actor.cli:app"
brain = "navi_actor.cli:brain_main"

[tool.uv.sources]
navi-contracts = { path = "../contracts", editable = true }
navi-environment = { path = "../environment", editable = true }
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/navi_actor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--strict-markers", "--strict-config", "-ra", "--tb=short"]
cache_dir = "tests/.pytest_cache_local"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disable_error_code = ["type-arg", "no-any-return", "unused-ignore"]

[[tool.mypy.overrides]]
module = [
    "zmq",
    "typer",
    "matplotlib",
    "matplotlib.*",
    "navi_contracts",
    "navi_contracts.*",
    "torch",
    "torch.*",
    "mambapy",
    "mambapy.*",
    "faiss",
    "faiss.*",
    "psutil",
    "psutil.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["navi_actor.cli"]
disable_error_code = ["misc"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
