[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "navi-environment"
version = "0.1.0"
description = "Navi Environment — Ghost-Matrix Simulation Layer (headless stepping + distance matrix output)"
requires-python = ">=3.12"
dependencies = [
    "navi-contracts",
    "pydantic-settings>=2.7",
    "pyzmq>=26.0",
    "msgpack>=1.0",
    "numpy>=1.26",
    "torch==2.5.1",
    "torch-sdf",
    "jax>=0.4.33",
    "jaxlib>=0.4.33",
    "typer>=0.12",
    "trimesh>=4.0",
]

[project.optional-dependencies]
mjx = [
    "mujoco>=3.2.6",
]

[project.scripts]
navi-environment = "navi_environment.cli:app"
environment = "navi_environment.cli:serve_shortcut"

[tool.uv.sources]
navi-contracts = { path = "../contracts", editable = true }
torch-sdf = { path = "../torch-sdf", editable = true }
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--strict-markers", "--strict-config", "-ra", "--tb=short"]
cache_dir = "tests/.pytest_cache_local"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disable_error_code = ["type-arg", "no-any-return", "unused-ignore", "attr-defined"]

[[tool.mypy.overrides]]
module = [
    "zmq",
    "typer",
    "navi_contracts",
    "navi_contracts.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["navi_environment.cli"]
disable_error_code = ["misc"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
