[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "navi-inspector"
version = "0.1.0"
description = "GMDAG 3D Inspector — interactive viewer and mesh exporter for .gmdag files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pydantic-settings>=2.7",
    "typer>=0.15",
    "rich>=13.0",
    "pyvista>=0.44",
    "scikit-image>=0.22",
    "mypy>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
navi-inspector = "navi_inspector.cli:app"
inspector = "navi_inspector.cli:inspector_shortcut"

[tool.hatch.build.targets.wheel]
packages = ["src/navi_inspector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--strict-markers", "--strict-config", "-ra", "--tb=short"]
cache_dir = "tests/.pytest_cache_local"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "pyvista.*",
    "skimage.*",
    "vtkmodules.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "RET", "SIM"]
ignore = ["S101"]
