[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "navi-section-manager"
version = "0.1.0"
description = "Navi Section Manager — Ghost-Matrix Simulation Layer (headless stepping + distance matrix output)"
requires-python = ">=3.12"
dependencies = [
    "navi-contracts",
    "pyzmq>=26.0",
    "msgpack>=1.0",
    "numpy>=1.26",
    "jax>=0.4.33",
    "jaxlib>=0.4.33",
    "mujoco>=3.2.6",
    "typer>=0.12",
    "zarr>=3.0",
    "trimesh>=4.0",
    "rtree>=1.0",
    "embreex>=2.17.0",
]

[project.scripts]
navi-section-manager = "navi_section_manager.cli:app"

[tool.uv.sources]
navi-contracts = { path = "../contracts", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--strict-markers", "--strict-config", "-ra", "--tb=short"]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disable_error_code = ["type-arg", "no-any-return", "unused-ignore", "attr-defined"]

[[tool.mypy.overrides]]
module = [
    "zmq",
    "typer",
    "cv2",
    "zarr",
    "navi_contracts",
    "navi_contracts.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["navi_section_manager.cli"]
disable_error_code = ["misc"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
