[build-system]
requires = ["setuptools>=61.0", "torch>=2.5.1", "ninja", "numpy>=1.24.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-sdf"
version = "0.1.0"
description = "Native SDF DAG Engine for O(1) Sphere Tracing (C++/CUDA Backend)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.5.1",
    "numpy>=1.24.0",
    "numba>=0.57.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[tool.setuptools]
packages = ["torch_sdf"]

[tool.setuptools.package-data]
"*" = ["*.py"]
