[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voxel-dag"
version = "0.1.0"
description = "High-performance Agnostic Voxel DAG Compiler"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "numba>=0.57.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[project.scripts]
voxel-dag-compiler = "voxel_dag.compiler:main"
bsp-to-obj = "voxel_dag.bsp_to_obj:main"

[tool.setuptools]
packages = ["voxel_dag"]

[tool.setuptools.package-data]
"*" = ["*.py"]
